src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Locked__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates this Account cannot be updated</description>
        <label>Account Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compiere_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Compiere Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contacts_Nr__c</fullName>
        <label>Number Of Contacts</label>
        <summaryForeignKey>Campaign_Account__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <description>CountryCode</description>
        <label>CountryCode</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerCode__c</fullName>
        <description>CustomerCode</description>
        <label>CustomerCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRM_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by DRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRM_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRM Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Id_18_ch__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id 18 ch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Duplication of Id.
Used for data testing purposes.</description>
        <externalId>true</externalId>
        <label>Id Clone</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Latin__c</fullName>
        <formula>HYPERLINK(&quot;javascript:alert(&apos;Hello World&apos;); var html_doc = document.getElementsByTagName(&apos;head&apos;)[0]; var js =document.createElement(&apos;script&apos;);js.setAttribute(&apos;type&apos;,&apos;text/javascript&apos;);js.setAttribute(&apos;src&apos;,&apos;/resource/1429623742000/transliterate&apos;);html_doc.appendChild(js); js.onload={ document.write(transliterate(&apos;мир&apos;)};&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Compiere_FF__c</fullName>
        <formula>HYPERLINK(&quot;http://berpt01.srv.rim.net:2080/apps/Compiere.html#Node?nodeID=110&amp;columnName=C_BPartner_ID&amp;Record_ID=&quot;&amp;Compiere_Id__c &amp; &quot;&amp;type=zoom&amp;mode=single&quot;,Name,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link Compiere</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Compiere__c</fullName>
        <label>Link Compiere</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MultiPick__c</fullName>
        <label>MultiPick</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MutliPick_FF__c</fullName>
        <formula>IF(INCLUDES( MultiPick__c, &quot;A&quot;), &quot;A&quot;, NULL)  + BR() + 
IF(INCLUDES( MultiPick__c, &quot;B&quot;), &quot;B&quot;, NULL)  + BR() + 
IF(INCLUDES( MultiPick__c, &quot;C&quot;), &quot;C&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MutliPick FF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>25</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Produce_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to facilitate / simulate an error.
A field validation is attached to trigger an error when this field is set to true.</description>
        <label>Produce Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_ID__c</fullName>
        <externalId>true</externalId>
        <label>SAP_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Org_Instance__c</fullName>
        <formula>$Api.Partner_Server_URL_330</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Org Instance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Switch__c</fullName>
        <formula>HYPERLINK(&quot;javascript:var caseObj = new sforce.SObject(&apos;Case&apos;); caseObj.Id = &apos;Case.Id&apos;; caseObj.OwnerId = &apos;$User.Id&apos;; var result = sforce.connection.update([caseObj]); if (result[0].success==&apos;false&apos;) { alert(result[0].errors.message); } else { location.reload(true); }&quot;,&quot;Switch&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Switch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Reference2__c</fullName>
        <label>Territory Reference2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>DEV_JAVA</fullName>
                </value>
                <value>
                    <fullName>DEV_Salesforce</fullName>
                </value>
                <value>
                    <fullName>TECH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Reference__c</fullName>
        <label>Territory Reference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestNumber__c</fullName>
        <label>TestNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Track__c</fullName>
        <label>Update Track</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>computerprofile__CP_Get_Contacts__c</fullName>
        <formula>HYPERLINK( 
&quot;/apex/computerprofile__POC_GetContactsForAccount?scontrolCaching=1&amp;id=&quot; + Id, 
IMAGE(&quot;/img/icon/people24.png&quot;, &quot;Get Contacts from CFP&quot;), &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Get Contacts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>computerprofile__CP_Link_Account__c</fullName>
        <formula>HYPERLINK(
&quot;/apex/computerprofile__POC_CFPLinkAccount?scontrolCaching=1&amp;id=&quot; + Id,
IMAGE(&quot;/img/icon/hands24.png&quot;, &quot;Link with CFP&quot;), &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Link Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>computerprofile__CP_Report__c</fullName>
        <formula>HYPERLINK( 
&quot;/apex/computerprofile__POC_AccountReport?scontrolCaching=1&amp;id=&quot; + Id, 
IMAGE(&quot;/img/icon/contracts24.png&quot;, &quot;Merge with CFP&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>computerprofile__CP_Update_Account__c</fullName>
        <formula>HYPERLINK( 
&quot;/apex/computerprofile__POC_UpdateAccountFromWS?scontrolCaching=1&amp;id=&quot; + Id, 
IMAGE(&quot;/img/icon/custom51_100/pencil24.png&quot;, &quot;Merge with CFP&quot;), &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Update Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>computerprofile__cfp_CFP_No__c</fullName>
        <description>This field maintain relationship beetwen the CFP object and Salesforce Object</description>
        <inlineHelpText>CFP No</inlineHelpText>
        <label>CP No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>computerprofile__cfp_VAT_Number__c</fullName>
        <description>This field maintain the VAT Number of the specific site</description>
        <inlineHelpText>VAT Number</inlineHelpText>
        <label>VAT Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>soco__Amount_Donated_Current_Fiscal_Year__c</fullName>
        <label>Amount Donated Current Fiscal Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>soco__Amount_Donated_Last_Fiscal_Year__c</fullName>
        <label>Amount Donated Last Fiscal Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>soco__Amount_Donated_Penultimate_Fiscal_Year__c</fullName>
        <label>Amount Donated Penultimate Fiscal Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>soco__Billing_AddressLine2__c</fullName>
        <label>Extra Address Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Billing_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Billing_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Billing_Housenumber__c</fullName>
        <label>Housenumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Billing_Street__c</fullName>
        <description>contains the street name, or the word &quot;PO box&quot;</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Billing_Suffix__c</fullName>
        <label>Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Billing_Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Branche_Code__c</fullName>
        <label>Branche Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Donor_End_Date__c</fullName>
        <label>Donor End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soco__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>soco__Exclude_from_Auto_Naming__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used to exclude the account from auto naming</description>
        <inlineHelpText>Check the box if you want to exclude this account from auto naming</inlineHelpText>
        <label>Exclude from Auto Naming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>soco__First_Donation_Date__c</fullName>
        <label>First Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soco__Last_Donation__c</fullName>
        <label>Last Donation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soco__Number_of_Donations_Current_Fiscal_Year__c</fullName>
        <label>Number of Donations Current Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Number_of_Donations_Last_Fiscal_Year__c</fullName>
        <label>Number of Donations Last Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Number_of_Donations_Penultimate_FY__c</fullName>
        <label>Number of Donations Penultimate FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Originating_Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Originating Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Resulting Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>soco__Primary_communication_channel__c</fullName>
        <label>Primary communication channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Telephone</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Regular mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>soco__Reason_for_status__c</fullName>
        <label>Reason for status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Shipping_AddressLine2__c</fullName>
        <label>Extra Address Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Shipping_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Shipping_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Shipping_Housenumber__c</fullName>
        <label>Housenumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>soco__Shipping_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Shipping_Suffix__c</fullName>
        <label>Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Shipping_Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>soco__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>soco__Source__c.soco__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>By default only active records are shown.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>soco__Source__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>soco__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Address Unknown</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Accounts_MDM</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ACCOUNT_NUMBER</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.B2B</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY_CODE</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Accounts MDM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fleet_Profile_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Fleet Profile Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <listViews>
        <fullName>Updated_This_Week</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Update_Track__c</columns>
        <columns>SAP_ID__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>StartDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Updated This Week</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>B2B</fullName>
        <active>true</active>
        <label>B2B</label>
    </recordTypes>
    <recordTypes>
        <fullName>B2C</fullName>
        <active>true</active>
        <label>B2C</label>
    </recordTypes>
    <recordTypes>
        <fullName>soco__Household</fullName>
        <active>true</active>
        <description>Represents Household accounts</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>soco__Organization</fullName>
        <active>true</active>
        <description>Represents Organization Accounts</description>
        <label>Organization</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Name_Test_VR</fullName>
        <active>false</active>
        <description>Test rule</description>
        <errorConditionFormula>CONTAINS(Name, &apos;Hospit&apos;)</errorConditionFormula>
        <errorMessage>No Hospitals allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Postal_Code</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX( BillingPostalCode , &quot;^NL*&quot;))</errorConditionFormula>
        <errorMessage>Postal Code not valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Update_Name_Locked_Account</fullName>
        <active>true</active>
        <errorConditionFormula>Account_Locked__c &amp;&amp;  ISCHANGED(Name)</errorConditionFormula>
        <errorMessage>Cannot update the Name of a locked Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Priorvalue_RT_B2B</fullName>
        <active>false</active>
        <errorConditionFormula>PRIORVALUE(RecordTypeId) =&apos;012C00000004aZJ&apos;</errorConditionFormula>
        <errorMessage>PRIORVALUE = B2B</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Priorvalue_RT_B2C</fullName>
        <active>false</active>
        <errorConditionFormula>PRIORVALUE(RecordTypeId) =&apos;012C00000004aZO&apos;</errorConditionFormula>
        <errorMessage>PRIORVALUE = B2C</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Produce_Error</fullName>
        <active>true</active>
        <description>For testing purposes, the validation rule will fire if Produce_Error__c = TRUE</description>
        <errorConditionFormula>Produce_Error__c</errorConditionFormula>
        <errorMessage>Produce error is set to TRUE</errorMessage>
    </validationRules>
</CustomObject>